--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   node:
     container_name: ${COMPOSE_PROJECT_NAME}_node
-    image: mpastorg/golem-impg-lts:0.7.3
+    image: mpastorg/golem-mpg-lts:0.7.3
     restart: always
     volumes:
       - /etc/localtime:/etc/localtime:ro
